// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextQuestion /> should render 1`] = `
.c2 {
  padding: 0;
  font-size: 1rem;
  text-align: left;
  line-height: inherit;
  width: auto;
  border-radius: 0.25rem;
  border: 1px solid #c9d3df;
  padding: 0.625rem 0.25rem;
  border-color: #c9d3df;
}

.c2::-webkit-outer-spin-button,
.c2::-webkit-inner-spin-button {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  margin: 0;
}

.c0 {
  font-size: 1.25rem;
  display: block;
  margin-top: 1.25rem;
  margin-bottom: 0.625rem;
}

.c4 {
  color: #4c5467;
  font-weight: 600;
  font-size: 0.875rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 1.25rem;
}

.c3 {
  display: inline-block;
  margin-left: 1.25rem;
}

<div>
  <label
    class="c0"
    for="1"
  >
    lorem ipsum
  </label>
  <div
    class="c1"
  >
    <input
      class="c2"
      id="1"
      name="test"
      type="text"
      value="hello"
    />
    <div
      class="c3"
    >
      <span
        class="c4"
      />
    </div>
  </div>
</div>
`;

exports[`<TextQuestion /> should render error 1`] = `
.c2 {
  padding: 0;
  font-size: 1rem;
  text-align: left;
  line-height: inherit;
  width: auto;
  border-radius: 0.25rem;
  border: 1px solid #c9d3df;
  padding: 0.625rem 0.25rem;
  border-color: #c9d3df;
}

.c2::-webkit-outer-spin-button,
.c2::-webkit-inner-spin-button {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  margin: 0;
}

.c0 {
  font-size: 1.25rem;
  display: block;
  margin-top: 1.25rem;
  margin-bottom: 0.625rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 1.25rem;
}

<div>
  <label
    class="c0"
    for="2"
  >
    lorem ipsum
  </label>
  <div
    class="c1"
  >
    <input
      class="c2"
      id="2"
      name="test"
      type="text"
      value=""
    />
  </div>
</div>
`;
